Time: 39 ms (5.28%), Space: 45.4 MB (42.31%) - LeetHub